--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/PF-Armadillos/ShellScape-Garden-Planner#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
